--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,12 @@ body {
 
 .gameBody {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     background: #3b3034;
     font-family: courier;
     color: white;
+   line-height: 2.5em;
     
   }
 #startButton  {
@@ -37,25 +39,21 @@ body {
   
 }
 
-li, #timer {
+#timer {
   list-style: none;
   font-size: 24px;
   line-height: 2em;
+  background-color: white;
+  color: #3B3034;
   
 }
 
-#timer {
-  background-color: white;
-  color: #3B3034;
+
+.option {
+  display: block;
+
 }
 
-li.button  {
-  background-color: transparent;
-  border: none;
+#box {
+  height: 100%;
 }
-
-#question, #options {
-  display: flex;
-  flex-wrap: wrap;
-}
-
