--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
    
     
   }
-#startButton  {
+#startButton {
   display: flex;
   justify-content: center;
   padding: 1em;
@@ -45,8 +45,8 @@ body {
   list-style: none;
   font-size: 24px;
   line-height: 2em;
-  background-color: white;
-  color: #3B3034;
+  background-color: #3b3034;
+  color:white;
   
 }
 
